--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -8,7 +8,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="{{activeIfTemplateIs 'Topics'}}"><a href="{{ pathFor 'topics' }}">Topic Models</a></li>
-          <li class="{{activeIfTemplateIs 'Hashtags'}}"><a href="{{ pathFor 'hashtags' }}">Hashtag stats</a></li>
+          <!-- <li class="{{activeIfTemplateIs 'Hashtags'}}"><a href="{{ pathFor 'hashtags' }}">Hashtag stats</a></li> -->
           <li class="{{activeIfTemplateIs 'SimpleSentiment'}}"><a href="{{ pathFor 'simpleSentiment' }}">Sentiment</a></li>
         </ul>
 
