--- a/client/templates/sentiment/simple.html
+++ b/client/templates/sentiment/simple.html
@@ -80,6 +80,32 @@
 					<label class="checkbox-inline"><input type="checkbox" class="reply-filter" value="" checked>Replies</label>
 			</div>
 
+			<div class="input-group">
+				<span class="input-group-addon">
+					<span>Result type</span>
+				</span>
+			  <div class="radio-group">
+			    <div class="radio-inline">
+			      <label>
+			        <input type="radio" name="result_type" id="recentRadio" value="recent" class="radio-gender">
+			        Recent
+			      </label>
+			    </div>
+			    <div class="radio-inline">
+			      <label>
+			        <input type="radio" name="result_type" id="popularRadio" value="popular" class="radio-gender">
+			        Popular
+			      </label>
+			    </div>
+			    <div class="radio-inline">
+			      <label>
+			        <input type="radio" name="result_type" id="mixRadio" value="mixed" class="radio-gender" checked>
+			        Mixed
+			      </label>
+			    </div>
+			  </div>
+			</div>
+
 
 		    <button type="button" class="btn btn-default run-sentiment-tweets" aria-label="Left Align">
 		        <span>Search</span>
